test/corpus/date_time.txt
==================
Offset Date-Time
==================

odt1 = 1979-05-27T07:32:00Z
odt2 = 1979-05-27T00:32:00-07:00
odt3 = 1979-05-27T00:32:00.999999-07:00
odt4 = 1979-05-27 07:32:00Z

---

(source_file
  (key_value
    key: (key
      (bare_key))
    value: (date_time))
  (key_value
    key: (key
      (bare_key))
    value: (date_time))
  (key_value
    key: (key
      (bare_key))
    value: (date_time))
  (key_value
    key: (key
      (bare_key))
    value: (date_time)))

==================
Local Date-Time
==================

ldt1 = 1979-05-27T07:32:00
ldt2 = 1979-05-27T00:32:00.999999

---

(source_file
  (key_value
    key: (key
      (bare_key))
    value: (date_time))
  (key_value
    key: (key
      (bare_key))
    value: (date_time)))

==================
Local Date
==================

ld1 = 1979-05-27

---

(source_file
  (key_value
    key: (key
      (bare_key))
    value: (date_time)))

==================
Local Time
==================

lt1 = 07:32:00
lt2 = 00:32:00.999999

---

(source_file
  (key_value
    key: (key
      (bare_key))
    value: (date_time))
  (key_value
    key: (key
      (bare_key))
    value: (date_time))) 
